<resources>
    <string name="app_name">Vacina +</string>
    <string name="btnCadastro">Cadastrar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="txtCadastro">Cadastro</string>
    <string name="txtNome">Nome</string>
    <string name="txtHintNome">Digite seu nome</string>
    <string name="txtEmail">Email</string>
    <string name="txtHintEmail">Digite seu e-mail</string>
    <string name="txtSenhaA">Senha</string>
    <string name="txtHintSenhaA">Informe uma senha</string>
    <string name="txtSenhaB">Repita sua senha</string>
    <string name="txtHintSenhaB">Confirme a senha informada</string>
    <string name="ckTermo">Li e concordo com os termos de uso.</string>
    <string name="txtLogin">Login</string>
    <string name="ckLembrar">Lembrar</string>
    <string name="txtRecuperarSenha">Recuperar Senha</string>
    <string name="btnAcessar">Acessar</string>
    <string name="txtLer"><![CDATA[Ler Política de Privacidade & Termos de Uso.]]></string>
    <string name="editSenha">Informe sua senha</string>
    <string name="txtEstado">Estado</string>
    <string name="txtMunicipio">Município</string>
    <string name="txtTituloP">Usuário</string>
    <string name="txtCpf">CPF</string>
    <string name="editCpf">Informe seu CPF</string>
    <string name="tpUsuario">Instituição de Saúde</string>
    <string name="btnCadPessoa">Salvar e Continuar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="spinnerEstado">Selecione seu Estado</string>
    <string name="spinnerMunicipio">Selecione seu Município</string>
    <string name="txtTipoPerfil">Tipo Perfil</string>
    <string name="radioButtonP">Pessoa</string>
    <string name="radioButtonI">Instituição de Saúde</string>
    <string name="txtCnes">CNES</string>
    <string name="editCnes">Informe o CNES da Instituição</string>
</resources>